Añadido volumen y pantalla completa, se movió al modal y terminado curso en Platzi

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Platzi Video</title>
+	<link rel="stylesheet" href="dist/css/home.c6ef78108b91202eb4c7.css">
 </head>
 <body>
 	<div id="home-container"></div>
 	<div id="modal-container"></div>
-	<script src="http://localhost:9000/js/home.js"></script>
+	<!-- <script src="http://localhost:9000/js/home.js"></script> -->
+	<script src='dist/js/home.c6ef78108b91202eb4c7.js'></script>
 </body>
 </html>
